--- a/.hgignore
+++ b/.hgignore
@@ -8,7 +8,7 @@ spinify
 *.BAK
 *.bak
 *.pyc
-src/spinify2
+src/spinify
 test/graphtest
 test/randtest
 test/recttest
@@ -18,5 +18,5 @@ test/swendsentest
 
 syntax: regexp
 ^build/
-^spinify2.xcodeproj/
+^spinify.xcodeproj/
 
