Electric repulsion for even distribution.

--- a/src/Makefile
+++ b/src/Makefile
@@ -6,18 +6,39 @@ all: spinify
 spinify: $(OBJ)
 	$(CXX) -o $@ $^
 
+Graph: Graph.o Point3D.o
+	$(CXX) -o $@ $^
+
+Point3D: Point3D.o
+	$(CXX) -o $@ $^
+
+Simul: Simul.o
+	$(CXX) -o $@ $^
+
+Surface: Surface.o
+	$(CXX) -o $@ $^
+
+tezuka: tezuka.o
+	$(CXX) -o $@ $^
+
 main.o: Graph.h Simul.h tezuka.h
 
 Graph.o: Graph.h
+
+Point3D.o: Point3D.h
 
 Simul.o: Simul.h
 
 tezuka.o: tezuka.h
 
+Surface.o: Surface.h
+
 %.o: %.c
 	$(CXX) -o $@ -c $< $(CXXFLAGS)
 
-.PHONY: clean
+.PHONY: cleanall clean
+
+cleanall: clean
 
 clean:
 	@rm -rf *.o
