--- a/test/Makefile
+++ b/test/Makefile
@@ -1,20 +1,26 @@
 SRC_DIR = ../src
 
-all: graphtest simultest swendsentest recttest randtest
+all: graphtest simultest swendsentest recttest randtest spheretest point3dtest
 
-graphtest: graphtest.o $(SRC_DIR)/Graph.o $(SRC_DIR)/tezuka.o
+graphtest: graphtest.o $(SRC_DIR)/Graph.o $(SRC_DIR)/Point3D.o $(SRC_DIR)/tezuka.o
 	$(CXX) -o $@ $^
 
-simultest: simultest.o $(SRC_DIR)/Simul.o $(SRC_DIR)/Graph.o $(SRC_DIR)/tezuka.o
+simultest: simultest.o $(SRC_DIR)/Simul.o $(SRC_DIR)/Graph.o $(SRC_DIR)/Point3D.o $(SRC_DIR)/tezuka.o
 	$(CXX) -o $@ $^
 
-swendsentest: swendsentest.o $(SRC_DIR)/Simul.o $(SRC_DIR)/Graph.o $(SRC_DIR)/tezuka.o
+swendsentest: swendsentest.o $(SRC_DIR)/Simul.o $(SRC_DIR)/Graph.o $(SRC_DIR)/Point3D.o $(SRC_DIR)/tezuka.o
 	$(CXX) -o $@ $^
 
-recttest: recttest.o $(SRC_DIR)/Graph.o $(SRC_DIR)/tezuka.o
+recttest: recttest.o $(SRC_DIR)/Graph.o $(SRC_DIR)/Point3D.o $(SRC_DIR)/tezuka.o
 	$(CXX) -o $@ $^
 
 randtest: randtest.o $(SRC_DIR)/tezuka.o
+	$(CXX) -o $@ $^
+
+spheretest: spheretest.o $(SRC_DIR)/Graph.o $(SRC_DIR)/Point3D.o $(SRC_DIR)/Surface.o $(SRC_DIR)/tezuka.o
+	$(CXX) -o $@ $^
+
+point3dtest: point3dtest.o $(SRC_DIR)/Point3D.o
 	$(CXX) -o $@ $^
 
 %.o: %.c
@@ -22,14 +28,19 @@ randtest: randtest.o $(SRC_DIR)/tezuka.o
 
 $(SRC_DIR)/Graph.o: $(SRC_DIR)/Graph.h
 
+$(SRC_DIR)/Point3D.o: $(SRC_DIR)/Point3D.h
+
 $(SRC_DIR)/Simul.o: $(SRC_DIR)/Simul.h
 
 $(SRC_DIR)/tezuka.o: $(SRC_DIR)/tezuka.h
 
 $(SRC_DIR)/%.o: $(SRC_DIR)/%.c
-	cd $(SRC_DIR)/ && $(CXX) -o $@ -c $< $(CXXFLAGS)
+	cd $(SRC_DIR)/ && $(MAKE) $@
 
-.PHONY: clean
+.PHONY: cleanall clean
+
+cleanall: clean
+	@rm -rf graphtest simultest swendsentest recttest randtest spheretest point3dtest
 
 clean:
 	@rm -rf *.o
