User interface and manual page.

--- a/src/Makefile
+++ b/src/Makefile
@@ -12,6 +12,9 @@ Graph: Graph.o Point3D.o
 Point3D: Point3D.o
 	$(CXX) -o $@ $^
 
+Output: Output.o
+	$(CXX) -o $@ $^
+
 Simul: Simul.o
 	$(CXX) -o $@ $^
 
@@ -21,9 +24,11 @@ Surface: Surface.o
 tezuka: tezuka.o
 	$(CXX) -o $@ $^
 
-main.o: Graph.h Simul.h tezuka.h
+main.o: Graph.h Output.h Simul.h tezuka.h
 
 Graph.o: Graph.h
+
+Output.o: Output.h
 
 Point3D.o: Point3D.h
 
