--- a/doc/CONFIG
+++ b/doc/CONFIG
@@ -15,12 +15,23 @@ be done either on the command line or in the config file.
 |---------------------------------------------|
 | lattice              |                 none |
 | measure              |                    u |
-| output               |                  raw |
 | nNodes               |                 none |
 | rectN                |                 none |
 | rectM                |                 none |
 | temps, nTemps        |  1/squareCritBeta, 1 |
 | cfgFile              |         ~/.spinifyrc |
+\---------------------------------------------/
+
+
+== What and where to output ==
+
+/---------------------------------------------\
+|        Option        |    Default value     |
+|---------------------------------------------|
+| output               |                  raw |
+| graphOutFile         |                   "" |
+| outToFile            |                false |
+| simulOutFile         |                   "" |
 \---------------------------------------------/
 
 
@@ -34,6 +45,8 @@ be done either on the command line or in the config file.
 | maxDecorrelTime      |                   99 |
 | minDecorrelTime      |                    5 |
 | Jval                 |                   -1 |
+| nMeasures            |                  100 |
+| nInitTherm           |                  500 |
 \---------------------------------------------/
 
 
