--- a/.hgignore
+++ b/.hgignore
@@ -1,5 +1,6 @@
 syntax: glob
 .DS_Store
+*.exe
 *.o
 *.a
 _*_
@@ -19,12 +20,6 @@ test/swendsentest
 test/spheretest
 test/point3dtest
 test/planedelaunaytest
-qconvex
-qdelaunay
-qhull
-qhalf
-qvoronoi
-rbox
 *.py
 *.htm
 
