--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -14,6 +14,7 @@
 
 @SET_MAKE@
 
+
 VPATH = @srcdir@
 pkgdatadir = $(datadir)/@PACKAGE@
 pkglibdir = $(libdir)/@PACKAGE@
@@ -35,7 +36,8 @@ noinst_PROGRAMS = graphtest$(EXEEXT) parsertest$(EXEEXT) \
 	randtest$(EXEEXT) recttest$(EXEEXT) spheretest$(EXEEXT) \
 	swendsentest$(EXEEXT)
 subdir = tests
-DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
+DIST_COMMON = $(dist_noinst_DATA) $(srcdir)/Makefile.am \
+	$(srcdir)/Makefile.in
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/configure.ac
 am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
@@ -102,6 +104,7 @@ DIST_SOURCES = $(graphtest_SOURCES) $(parsertest_SOURCES) \
 	$(planedelaunaytest_SOURCES) $(point3dtest_SOURCES) \
 	$(randtest_SOURCES) $(recttest_SOURCES) $(spheretest_SOURCES) \
 	$(swendsentest_SOURCES)
+DATA = $(dist_noinst_DATA)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
@@ -201,6 +204,7 @@ point3d_sources = ../src/Point3D.cpp ../src/Point3D.h
 simul_sources = ../src/Simul.cpp ../src/Simul.h
 surface_sources = ../src/Surface.cpp ../src/Surface.h
 tezuka_sources = ../src/tezuka.cpp ../src/tezuka.h
+dist_noinst_DATA = Makefile.unix
 graphtest_SOURCES = graphtest.cpp \
 					$(graph_sources) \
 					$(point3d_sources) \
@@ -511,7 +515,7 @@ distdir: $(DISTFILES)
 	done
 check-am: all-am
 check: check-am
-all-am: Makefile $(PROGRAMS)
+all-am: Makefile $(PROGRAMS) $(DATA)
 installdirs:
 install: install-am
 install-exec: install-exec-am
