--- a/configure.ac
+++ b/configure.ac
@@ -10,6 +10,7 @@ AC_C_CONST
 AC_FUNC_STRTOD
 AC_HEADER_STDBOOL
 AC_HEADER_TIME
+AC_TYPE_SIZE_T
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_FILES([
 	Makefile
