Add more file types to .hgignore.

--- a/.hgignore
+++ b/.hgignore
@@ -5,21 +5,26 @@ syntax: glob
 *.a
 _*_
 .depend
+.deps
 spinify
 *.swp
 *.BAK
 *.bak
 *.pyc
 *.orig
+*.dat
+*.log
+*.status
 src/spinify
-test/graphtest
-test/randtest
-test/recttest
-test/simultest
-test/swendsentest
-test/spheretest
-test/point3dtest
-test/planedelaunaytest
+tests/graphtest
+tests/randtest
+tests/recttest
+tests/simultest
+tests/swendsentest
+tests/spheretest
+tests/parsertest
+tests/point3dtest
+tests/planedelaunaytest
 *.py
 *.htm
 build
